# fake-news-detector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
conf/: cfg.yaml
conf/callbacks/: default.yaml
conf/data/: default.yaml
conf/logging/: mlflow.yaml
conf/module/: distilbert.yaml
conf/trainer/: default.yaml
fake_news_detector/: commands.py  dataset.py  infer.py  make_plots.py  model.py  train.py
tests/: test_ci.py  test_dataset.py  test_model.py
triton/: Dockerfile  docker-compose.yml
triton/sources/: requirements.txt  triton.py
triton/sources/static/: index.html
